dodanie parametru required w formularzu

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,11 +33,11 @@
     <div class="form-column">
         <div class="form-row">
             <label for="name">Nazwa produktu</label>
-            <input type="text" class="form-control" placeholder="nazwa produktu" name="name" id="name">
+            <input type="text" class="form-control" placeholder="nazwa produktu" name="name" id="name" required>
         </div>
         <div class="form-row">
             <label for="price">Cena produktu</label>
-            <input type="number" step="0.01" class="form-control" placeholder="cena" name="price" id="price">
+            <input type="number" step="0.01" class="form-control" placeholder="cena" name="price" id="price" required>
         </div>
         <input type="submit" class="btn btn-primary" value="Dodaj produkt">
     </div>
